24.07.30 optimize the logic for parsing a String article